cilium-networkpolicies/tailscale-networkpolicies/namespace-isolation-tailscale.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-isolation-tailscale
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
