cilium-networkpolicies/tailscale-networkpolicies/netpol-exposeapollo-pod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-exposeapollo-pod
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: expose-apollo
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "3478"
              protocol: UDP
            - port: "1900"
              protocol: UDP
