cilium-networkpolicies/tailscale-networkpolicies/netpol-tailscale-immich.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-tailscale-immich
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: tailscale-immich
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
        # - ports:
        #     - port: "5351"
        #       protocol: UDP
        # - ports:
        #     - port: "1900"
        #       protocol: UDP
    - toEntities:
        - world
