cilium-networkpolicies/tailscale-networkpolicies/netpol-tailscale-traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-tailscale-traefik
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "5351"
              protocol: UDP
            - port: "1900"
              protocol: UDP
            - port: "6443"
              protocol: TCP
