cilium-networkpolicies/tailscale-networkpolicies/netpol-traefik-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-traefik-egress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
