cilium-networkpolicies/tailscale-networkpolicies/netpol-traefik-operator.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-traefik-operator
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app: operator
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
