cilium-networkpolicies/tailscale-networkpolicies/netpol-traefik-pod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-traefik-pod
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "1900"
              protocol: UDP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "5351"
              protocol: UDP
            - port: "1900"
              protocol: UDP
