cilium-networkpolicies/tailscale-networkpolicies/tailscale-kasten-to-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-kasten-to-host
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: expose-apollo
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
