cilium-networkpolicies/tailscale-networkpolicies/tailscale-traefik-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-traefik-egress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: traefik
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "34384"
              protocol: UDP
            - port: "36046"
              protocol: UDP
            - port: "33339"
              protocol: UDP
            - port: "36333"
              protocol: UDP
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "5351"
              protocol: UDP
            - port: "1900"
              protocol: UDP
